完成发送邮件工具类编写及测试

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,14 @@ mybatis.type-aliases-package=com.wmy.community.entity
 mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
+# logging
 logging.level.com.wmy.community=debug
+
+#Email
+spring.mail.host=smtp.163.com
+spring.mail.port=465
+spring.mail.username=email2Test@163.com
+spring.mail.password=OARTPXJNROBVRWYL
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.ssl.enable=true
+
