--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>2.5.2</version>
         </dependency>
+<!--        字符串处理工具-->
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
     </dependencies>
 
     <build>
