完成注册后发送邮件激活账号功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,9 @@ logging.level.com.wmy.community=debug
 spring.mail.host=smtp.163.com
 spring.mail.port=465
 spring.mail.username=email2Test@163.com
-spring.mail.password=OARTPXJNROBVRWYL
+spring.mail.password=LMUOTSBIHIWRIHKV
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+community.path.domain=http://localhost:8080
 
