--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,13 @@
             <artifactId>kaptcha</artifactId>
             <version>2.3.2</version>
         </dependency>
+<!--        redis-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
