--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 # logging
 logging.level.com.wmy.community=debug
 
-#Email
+# Email
 spring.mail.host=smtp.163.com
 spring.mail.port=465
 spring.mail.username=email2Test@163.com
@@ -31,4 +31,9 @@ spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.ssl.enable=true
 
 community.path.domain=http://localhost:8080
+
+# RedisProperties
+spring.redis.database=11
+spring.redis.host=localhost
+spring.redis.port=6379
 
